# ollama-web

./: .gitignore  README.md  README_ja.md  THIRD_PARTY_LICENSES.txt  pyproject.toml  requirements.txt
scripts/: calc_server.py  echo_server.py  filesystem_server.py  persona_server.py  search_server.py  weather_server.py
src/ollama_web/: __init__.py  app.py  auth.py  config.py  llm.py  main.py  mcp.py  middleware.py  sessions.py  settings_store.py
src/ollama_web/i18n/: __init__.py
src/ollama_web/i18n/messages/: en.json  ja.json
src/ollama_web/prompts/: __init__.py  en.json  ja.json
src/ollama_web/routes/: auth.py  chat.py  mcp.py  models.py  pages.py  sessions.py  settings_route.py
src/ollama_web/static/: app.js  i18n.js  login.js  mcp.js  settings-actions.js  settings.css  style.css  tools.js
src/ollama_web/templates/: index.html  login.html
src/ollama_web/tools/: __init__.py  fetch.py  image.py  pdf.py  registry.py  scrape.py  search.py
src/ollama_web/tools/helper/: __init__.py  image.py  pdf.py  safe_http.py
tests/: __init__.py  test_clear_messages.py  test_i18n.py  test_i18n_rendering.py  test_llm.py  test_mcp.py  test_mcp_security_diagnostics.py  test_models.py  test_security.py  test_settings.py  test_tools.py
