[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-web"
version = "0.1.0"
description = "Ollama web project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.2",
    "ddgs>=9.14.4",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "beautifulsoup4>=0.0.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ollama-web = "ollama_web.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true